k8s/base/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:latest
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: grafana-datasources
          mountPath: /etc/grafana/provisioning/datasources/datasource.yaml
          subPath: datasource.yaml
        - name: grafana-dashboards-provider
          mountPath: /etc/grafana/provisioning/dashboards/dashboard.yaml
          subPath: dashboard.yaml
        - name: dashboards
          mountPath: /var/lib/grafana/dashboards
      volumes:
      - name: grafana-datasources
        configMap:
          name: grafana-datasource
      - name: grafana-dashboards-provider
        configMap:
          name: grafana-dashboard-provider
      - name: dashboards
        configMap:
          name: node-exploratory-dashboard
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  selector:
    app: grafana
  ports:
    - port: 80
      targetPort: 3000
